Fix image cropping: lock aspect-ratio to 3/2 and use contain to preserve full banner text

--- a/style.css
+++ b/style.css
@@ -170,24 +170,6 @@ header {
     width: 100%;
 }
 
-@media (min-width: 769px) {
-    .featured-grid > .featured-main:only-child {
-        display: grid;
-        grid-template-columns: 1.2fr 1fr;
-        align-items: stretch;
-    }
-    .featured-grid > .featured-main:only-child .featured-img-wrapper {
-        height: 100%;
-        min-height: 400px;
-    }
-    .featured-grid > .featured-main:only-child .featured-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 40px;
-    }
-}
-
 .featured-main {
     display: flex;
     flex-direction: column;
@@ -206,9 +188,12 @@ header {
 
 .featured-img-wrapper {
     width: 100%;
-    height: 400px;
-    background-size: cover;
+    height: auto;
+    aspect-ratio: 3 / 2;
+    background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
+    background-color: #000000;
 }
 
 .featured-content {
@@ -322,9 +307,13 @@ header {
 }
 
 .card-img {
-    height: 200px;
-    background-size: cover;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 3 / 2;
+    background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
+    background-color: #000000;
 }
 
 .card-body {
@@ -442,9 +431,12 @@ header {
 
 .modal-header-img {
     width: 100%;
-    height: 350px;
-    background-size: cover;
+    height: auto;
+    aspect-ratio: 3 / 2;
+    background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
+    background-color: #000000;
     position: relative;
 }
 
